[package]
name = "radb"
version = "0.1.3"
edition = "2021"
authors = ["OKIAAAA"]
readme = "README.md"
repository = "https://github.com/oslo254804746/radb.git"
description = "A Rust Implement Python AdbUtils"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
chrono = "0.4.31"
which = "5.0.0"
tempfile = "3.2.0"
image = "0.24.7"
regex = "1.10.2"
reqwest = { version = "0.11.23", features = ["blocking"] }

tracing-subscriber = "0.3.18"
log = "0.4.20"
tracing = "0.1.40"
async-trait = { version = "0.1.81", optional = true }
tokio = { version = "1.36.0", features = ["full"], optional = true}
futures-util = { version = "0.3.30", optional = true }
futures-core = { version = "0.3.30", optional = true }
async-stream = { version = "0.3.5", optional = true }

[features]
default = ["blocking"]
tokio_async = ["futures-core", "futures-util", "async-stream", "async-trait", "tokio"]
blocking = []

